# re_learn

./: .gitmodules  CMakeLists.txt  Makefile  README.md  auto_test.sh  bing.md  configure.sh
apps/: CMakeLists.txt
apps/VEMU/: CMakeLists.txt  README.md  main.c
apps/VEMU/include/: RISC_V_integer_reg.h  RV32I.h  RV32I_instruction.h  RV32I_memory.h  RV32I_registers.h
apps/VEMU/src/: RISC_V_integer_reg.c  RV32I_base_inst.c  RV32I_memory.c  RV32I_opcodes.c  RV32I_registers.c
apps/VEMU/tests/: CMakeLists.txt  test_add_sub.c  test_memory.c  test_registers.c
apps/lib_vtuzki_test/: CMakeLists.txt  s_array_test.c
apps/lib_vtuzki_test/tests/: CMakeLists.txt
apps/readelf/: CMakeLists.txt  main.c
apps/readelf/include/: read_elf.h
apps/readelf/src/: read_elf.c
apps/readelf/tests/: CMakeLists.txt
apps/template_app/: CMakeLists.txt  main.c
apps/template_app/include/: template_app.h
apps/template_app/src/: template_app.c
apps/template_app/tests/: CMakeLists.txt  test_template_app.c
cmake/: app_utils.cmake
data_structures_using_c/: Makefile  auto_test.sh  configure.sh
data_structures_using_c/app/: s_array_test.c
data_structures_using_c/include/: cc_array.h  cc_array_queue.h  cc_array_ring_queue.h  cc_array_sort.h  cc_array_stack.h  cc_atomic.h  cc_common.h  cc_dbg.h  cc_error_code.h  cc_iter.h  cc_list.h  cc_list_queue.h  cc_list_stack.h  cc_mem.h  cc_queue.h  cc_ring_queue.h  cc_stack.h  cc_stdint.h  dbg.h  error_code_automake.h
data_structures_using_c/include/core/: cc_common.h  cc_dbg.h  cc_mem.h  cc_stdint.h  run_time.h
data_structures_using_c/include/ds/iter/: cc_iter.h
data_structures_using_c/include/ds/list/: cc_list.h  cc_list_sort.h
data_structures_using_c/include/ds/queue/: cc_list_queue.h  cc_queue.h
data_structures_using_c/include/ds/stack/: cc_array_stack.h  cc_list_stack.h
data_structures_using_c/scripts/: build.mk  build_app_with_lib.mk  build_app_without_lib.mk  build_lib.mk
data_structures_using_c/src/: cc_array.c  cc_array_queue.c  cc_array_ring_queue.c  cc_array_sort.c  cc_array_stack.c  cc_list.c  cc_list_queue.c  cc_list_sort.c  cc_list_stack.c
data_structures_using_c/test/: cc_array_1_test.c  cc_array_2_test.c  cc_array_queue_1_test.c  cc_array_queue_static_test.c  cc_array_queue_test.c  cc_array_ring_queue_test.c  cc_array_stack_test.c  cc_list_1_static_test.c  cc_list_2_static_test.c  cc_list_queue_test.c  cc_list_stack_test.c  cc_list_static_test.c  cc_list_test.c  s_array_1_test.c  s_array_2_test.c  s_array_test.c
include/core/: cc_common.h  cc_mem.h  cc_run_time.h
include/ds/array/: cc_array.h  cc_array_sort.h
include/ds/iter/: cc_iter.h
include/ds/list/: cc_list.h  cc_list_pool.h  cc_list_sort.h
include/ds/pool/: cc_pool.h
include/ds/queue/: cc_array_queue.h  cc_list_queue.h  cc_queue.h
include/ds/ring_queue/: cc_array_ring_queue.h  cc_ring_queue.h
include/ds/stack/: cc_array_stack.h  cc_list_stack.h  cc_stack.h
learn_make/: Makefile
make/basic/: Makefile
make/with_c/: def.h  main.c
make/with_c/simple_progream_with_lib_src/: Makefile  run_test.sh
make/with_c/simple_progream_with_lib_src/app/: hello1.c
make/with_c/simple_progream_with_lib_src/include/: cc_array.h  cc_array_stack.h  cc_error_code.h  cc_stack.h  def.h  generate_error_codes.py  simple_array.h
make/with_c/simple_progream_with_lib_src/lib/: def.c
make/with_c/simple_progream_with_lib_src/scripts/: Untitled-1.mk  build.mk
make/with_c/simple_progream_with_lib_src/src/: cc_array.c  cc_array_sort.c  cc_array_stack.c  def.c  simple_array.c
make/with_c/simple_progream_with_lib_src/test/: cc_array_stack_test.c  hello.c  s_array_test.c  s_array_test1.c  s_array_test2.c
scripts/: build_app_with_lib.mk  build_app_without_lib.mk  build_lib.mk  test.mk
simple_progream/: Makefile  hello.c
src/: cc_array.c  cc_array_queue.c  cc_array_ring_queue.c  cc_array_sort.c  cc_array_stack.c  cc_list.c  cc_list_pool.c  cc_list_queue.c  cc_list_sort.c  cc_list_stack.c  cc_pool.c
test/: cc_array_1_static_test.c  cc_array_2_static_test.c  cc_array_queue_static_test.c  cc_array_stack_static_test.c  cc_array_static_test.c  cc_list_1_static_test.c  cc_list_2_static_test.c  cc_list_pool_1_static_test.c  cc_list_queue_static_test.c  cc_list_stack_static_test.c  cc_list_static_test.c  cc_pool_1_static_test.c
